--- a/package.json
+++ b/package.json
@@ -1,44 +1,49 @@
 {
-	"name": "boilerplate-react-typescript-storybook",
-	"private": true,
-	"version": "1.0.0",
-	"type": "module",
-	"scripts": {
-		"dev": "vite",
-		"build": "tsc && vite build",
-		"lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-		"preview": "vite preview",
-		"sb": "storybook dev -p 6006",
-		"build-sb": "storybook build",
-		"test": "vitest",
+  "name": "boilerplate-react-typescript-storybook",
+  "private": true,
+  "version": "1.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview",
+    "sb": "storybook dev -p 6006",
+    "build-sb": "storybook build",
+    "test": "vitest",
 		"coverage": "vitest run --coverage"
-	},
-	"dependencies": {
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
-	},
-	"devDependencies": {
-		"@storybook/addon-essentials": "^7.0.27",
-		"@storybook/addon-interactions": "^7.0.27",
-		"@storybook/addon-links": "^7.0.27",
-		"@storybook/blocks": "^7.0.27",
-		"@storybook/react": "^7.0.27",
-		"@storybook/react-vite": "^7.0.27",
-		"@storybook/testing-library": "^0.0.14-next.2",
-		"@types/react": "^18.2.14",
-		"@types/react-dom": "^18.2.6",
-		"@typescript-eslint/eslint-plugin": "^5.61.0",
-		"@typescript-eslint/parser": "^5.61.0",
-		"@vitejs/plugin-react": "^4.0.1",
-		"eslint": "^8.44.0",
-		"eslint-plugin-react-hooks": "^4.6.0",
-		"eslint-plugin-react-refresh": "^0.4.1",
-		"eslint-plugin-storybook": "^0.6.12",
-		"prop-types": "^15.8.1",
-		"sass": "^1.63.6",
-		"storybook": "^7.0.27",
-		"typescript": "^5.0.2",
-		"vite": "^4.4.0",
-		"vitest": "^0.33.0"
-	}
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "@chromatic-com/storybook": "^1.3.4",
+    "@storybook/addon-essentials": "^8.0.10",
+    "@storybook/addon-interactions": "^8.0.10",
+    "@storybook/addon-links": "^8.0.10",
+    "@storybook/addon-onboarding": "^8.0.10",
+    "@storybook/blocks": "^8.0.10",
+    "@storybook/react": "^8.0.10",
+    "@storybook/react-vite": "^8.0.10",
+    "@storybook/test": "^8.0.10",
+    "@testing-library/jest-dom": "^6.4.5",
+    "@testing-library/react": "^15.0.7",
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.6",
+    "eslint-plugin-storybook": "^0.8.0",
+    "jsdom": "^24.0.0",
+    "sass": "^1.77.0",
+    "storybook": "^8.0.10",
+    "typescript": "^5.2.2",
+    "vite": "^5.2.0",
+    "vitest": "^1.6.0"
+  }
 }
+
