--- a/package.json
+++ b/package.json
@@ -7,11 +7,10 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "sb": "storybook dev -p 6006",
-    "build-sb": "storybook build",
     "test": "vitest",
-		"coverage": "vitest run --coverage"
+    "coverage": "vitest run --coverage",
+    "sb": "storybook dev -p 6006",
+    "build-sb": "storybook build"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -34,16 +33,18 @@
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "@vitest/coverage-v8": "^1.6.0",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "eslint-plugin-storybook": "^0.8.0",
     "jsdom": "^24.0.0",
+    "rollup-plugin-scss": "^4.0.0",
     "sass": "^1.77.0",
     "storybook": "^8.0.10",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
+    "vite-plugin-dts": "^3.9.1",
     "vitest": "^1.6.0"
   }
 }
-
